tests/snapshots/alacritty__alacritty_default_explain.snap
---
source: tests/alacritty.rs
expression: "support::stderr_text(&output)"
---
failed to read terminal configuration: no font configured
