tests/snapshots/alacritty__alacritty_nerd_font_explain.snap
---
source: tests/alacritty.rs
expression: "support::stderr_text(&output)"
---
terminal configuration indicates a Nerd Font is active
