tests/snapshots/alacritty__alacritty_nerd_font_json.snap
---
source: tests/alacritty.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/alacritty-nerd-font/.config/alacritty/alacritty.toml",
  "detected": true,
  "font": "JetBrainsMono Nerd Font",
  "profile": null,
  "source": "terminal_config",
  "terminal": "alacritty"
}
