tests/snapshots/alacritty__alacritty_non_nerd_font_explain.snap
---
source: tests/alacritty.rs
expression: "support::stderr_text(&output)"
---
terminal configuration does not indicate a Nerd Font
