tests/snapshots/alacritty__alacritty_non_nerd_font_json.snap
---
source: tests/alacritty.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/alacritty-non-nerd-font/.config/alacritty/alacritty.toml",
  "detected": false,
  "font": "Menlo",
  "profile": null,
  "source": "terminal_config",
  "terminal": "alacritty"
}
